kfreebsd-6 (6.0-0.1) UNRELEASED; urgency=low

  [ Robert Edmonds ]
  * New upstream version pulled from RELENG_6 CVSup.
    - ReiserFS support.  (Closes: #335019)
  * Disabled the non-free nvenet driver.
  * Disabled the non-compiling hwpmc driver.
  [ Robert Millan ]
  * Merge 5.x branch changes (from rev 654 to rev 872)

 -- Robert Millan <rmh@aybabtu.com>  Sat, 12 Nov 2005 20:30:37 +0100

kfreebsd-5 (5.3-6) unstable; urgency=low

  * Changed SCSI_DELAY to 2000. Users that need a longer time could
    change this value in /boot/loader.conf (closes: bug#323155).

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 29 Aug 2005 14:25:44 +0200

kfreebsd-5 (5.3-5) unstable; urgency=low

  * Enabled atapicam driver (closes: bug#323155).
  * Allow the kernel to execve ET_DYN files. 

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 17 Aug 2005 15:44:18 +0200

kfreebsd-5 (5.3-4) unstable; urgency=low

  * Added OSS_GETVERSION ioctl. Patch from Robert Millan (closes: 
    bug#322197)

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 10 Aug 2005 00:56:00 +0200

kfreebsd-5 (5.3-3) unstable; urgency=low

  * Fixed the generation of the preinst script.

 -- Aurelien Jarno <aurel32@debian.org>  Sat,  6 Aug 2005 05:47:11 +0200

kfreebsd-5 (5.3-2) unstable; urgency=low

  [ Aurelien Jarno ]
  * Provide the kernel sources as /usr/src/kfreebsd-source-5.3.tar.bz2
  * Change the owner of the files inside kfreebsd-source-5.3.tar.bz2 to
    root:src.
  * Build a binary package kfreebsd-image-5.3 containing the kernel.
  * Build a binary package kfreebsd-headers-5.3 containing the headers.
  * Don't create kfreebsd.gz in postinst.
  * Make the kfreebsd-source-5.3 buildable on non GNU/kFreeBSD systems.
  * Added an abiname field.

  [ Guillem Jover ]
  * debian/rules:
    - Use DEB_HOST_ARCH_CPU instead if DEB_HOST_GNU_CPU, fix amd64.
    - Use SRC_PACKAGE instead of the tarball name.
    - Use make -C option instead of "cd".
  * General indentation fixes.

  [ Robert Millan ]