@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>
 Build-Depends-Indep: debhelper (>= 4.1.0), bzip2, patchutils (>= 0.2.25)
-Build-Depends: debhelper (>= 4.1.0), bzip2, patchutils (>= 0.2.25), dpkg (>= 1.13.9), freebsd6-buildutils (>= 6.0), libdb4.3-dev | libdb-dev, flex-old | flex, gcc-3.4, sharutils
+Build-Depends: debhelper (>= 4.1.0), bzip2, patchutils (>= 0.2.25), dpkg (>= 1.13.9), freebsd-buildutils (>= 6) | freebsd5-buildutils, libdb4.3-dev | libdb-dev, flex-old | flex, gcc-3.4, sharutils, libbsd-dev
 Standards-Version: 3.6.2
 
 Package: kfreebsd-source-6.0
@@ -40,6 +40,7 @@ Depends: freebsd-utils (>= 5), kldutils
 Provides: kfreebsd-image-6, kfreebsd-image
 Conflicts: kfreebsd5, kfreebsd-image
 Replaces: kfreebsd5
+Recommends: 
 Description: kernel of FreeBSD 6.0 image
  This package provides the binary image and pre-built loadable modules for 
  the kernel of FreeBSD 6.0, base of a GNU/kFreeBSD system.
@@ -59,7 +60,6 @@ Architecture: kfreebsd-i386
 Section: devel
 Provides: kfreebsd-headers-6
 Depends: kfreebsd-headers-6.0-1 (= ${Source-Version})
-Recommends: 
 Description: header files for kernel of FreeBSD 6.0
  This package provides the header files for kernel of FreeBSD 6.0, generally 
  used for building out-of-tree kernel modules. These files are going to be 
