@@ -5,6 +5,7 @@ Depends: freebsd-utils (>= 5), kldutils
 Provides: kfreebsd-image-@major@, kfreebsd-image
 Conflicts: kfreebsd5, kfreebsd-image
 Replaces: kfreebsd5
+Recommends: @recommends@
 Description: kernel of FreeBSD @version@ image
  This package provides the binary image and pre-built loadable modules for 
  the kernel of FreeBSD @version@, base of a GNU/kFreeBSD system.
@@ -24,7 +25,6 @@ Architecture: kfreebsd-@arch@
 Section: devel
 Provides: kfreebsd-headers-@major@
 Depends: kfreebsd-headers-@version@-@abiname@ (= ${Source-Version})
-Recommends: @recommends@
 Description: header files for kernel of FreeBSD @version@
  This package provides the header files for kernel of FreeBSD @version@, generally 
  used for building out-of-tree kernel modules. These files are going to be 
