@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>
 Build-Depends-Indep: debhelper (>= 4.1.0), bzip2, patchutils (>= 0.2.25)
-Build-Depends: debhelper (>= 4.1.0), bzip2, patchutils (>= 0.2.25), dpkg (>= 1.13.9), freebsd@major@-buildutils (>= @version@), libdb4.3-dev | libdb-dev, flex-old | flex, gcc-3.4, sharutils
+Build-Depends: debhelper (>= 4.1.0), bzip2, patchutils (>= 0.2.25), dpkg (>= 1.13.9), freebsd-buildutils (>= @major@) | freebsd5-buildutils, libdb4.3-dev | libdb-dev, flex-old | flex, gcc-3.4, sharutils, libbsd-dev
 Standards-Version: 3.6.2
 
 Package: kfreebsd-source-@version@
