@@ -6,7 +6,8 @@ kfreebsd-6 (6.0-0.1) UNRELEASED; urgency=low
   * Disabled the non-free nvenet driver.
   * Disabled the non-compiling hwpmc driver.
   [ Robert Millan ]
-  * Merge 5.x branch changes (from rev 654 to rev 872)
+  * Merge 5.x branch changes (from rev 654 to rev 1058)
+  * Add src/usr.sbin/config into the source and build/use it dynamicaly.
 
  -- Robert Millan <rmh@aybabtu.com>  Sat, 12 Nov 2005 20:30:37 +0100
 
